[gd_scene load_steps=19 format=3 uid="uid://dxs0mf46vamxi"]

[ext_resource type="Script" path="res://tests/inventory_test01.gd" id="1_74v4i"]
[ext_resource type="Material" uid="uid://b1ue2im1p5i3p" path="res://prefabs/prototyping/dark_grid_material.tres" id="1_qrkv2"]
[ext_resource type="Material" uid="uid://dbgmy4ipk72j4" path="res://prefabs/prototyping/orange_grid_material.tres" id="2_p7fqy"]
[ext_resource type="PackedScene" uid="uid://dhpg7408tcwtm" path="res://prefabs/player00/player0.tscn" id="3_wp2js"]
[ext_resource type="PackedScene" uid="uid://dncx3a4rr36wk" path="res://prefabs/tool_decal01/tool_decal01.tscn" id="4_480rq"]
[ext_resource type="PackedScene" uid="uid://dasuqcyshytx6" path="res://inventory/inventory.tscn" id="5_tegqj"]
[ext_resource type="Script" path="res://inventory/inventory_interface.gd" id="6_m6wav"]
[ext_resource type="PackedScene" uid="uid://ekb2mkpdc710" path="res://inventory/slot.tscn" id="8_i7q1w"]
[ext_resource type="PackedScene" uid="uid://bh2v3fk0wfams" path="res://interactable/chest.tscn" id="9_d3q2o"]
[ext_resource type="PackedScene" uid="uid://ws1an7gq6g26" path="res://inventory/hot_bar_inventory.tscn" id="9_tqu5v"]
[ext_resource type="PackedScene" uid="uid://bywy1gy8bosf1" path="res://item/pick_up/pickup.tscn" id="9_y6cks"]
[ext_resource type="Resource" uid="uid://dww5hfatfjiw" path="res://item/items/apple.tres" id="11_7ogt6"]
[ext_resource type="Script" path="res://inventory/slot_data.gd" id="12_1yvt2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tfswl"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_16356"]
sky_material = SubResource("ProceduralSkyMaterial_tfswl")

[sub_resource type="Environment" id="Environment_6ide3"]
background_mode = 2
sky = SubResource("Sky_16356")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fvto5"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true

[sub_resource type="Resource" id="Resource_0vbq5"]
script = ExtResource("12_1yvt2")
item_data = ExtResource("11_7ogt6")
quantity = 3

[node name="Prototype01" type="Node3D"]
script = ExtResource("1_74v4i")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6ide3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fvto5")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D_ground" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(32, 1, 32)
material = ExtResource("1_qrkv2")

[node name="CSGB3D_Block" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -4)
material = ExtResource("2_p7fqy")

[node name="CSGB3D_Block7" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, -4)
material = ExtResource("2_p7fqy")

[node name="CSGB3D_Block2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -4)
material = ExtResource("2_p7fqy")

[node name="CSGB3D_Block3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99512, 2, -3.99167)
material = ExtResource("2_p7fqy")

[node name="CSGB3D_Block9" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99512, 3, -3.99167)
material = ExtResource("2_p7fqy")

[node name="CSGB3D_Block10" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99512, 1, -6.49167)
size = Vector3(4, 1, 4)
material = ExtResource("2_p7fqy")

[node name="CSGB3D_Block4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 8, -4)
material = ExtResource("2_p7fqy")

[node name="Player" parent="." instance=ExtResource("3_wp2js")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129617, 0.513278, 1.43237)
IPlaceHolder = ExtResource("4_480rq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_m6wav")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("5_tegqj")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("5_tegqj")]
visible = false
layout_mode = 0
offset_left = 616.0
offset_top = 16.0
offset_right = 656.0
offset_bottom = 56.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("8_i7q1w")]
visible = false
modulate = Color(1, 1, 1, 0.486275)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HotBarInventory" parent="UI" instance=ExtResource("9_tqu5v")]
offset_left = 10.0
offset_top = 10.0
offset_right = 430.0
offset_bottom = 90.0

[node name="chest" parent="." instance=ExtResource("9_d3q2o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1)

[node name="Pickup" parent="." instance=ExtResource("9_y6cks")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, -1)

[node name="Pickup2" parent="." instance=ExtResource("9_y6cks")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, -1)
slot_data = SubResource("Resource_0vbq5")

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
